--- a/BlockChain04/区块链结构的创建.md
+++ b/BlockChain04/区块链结构的创建.md
@@ -64,8 +64,15 @@ func CreateBlockchainWithGenesisBlock() *BlockChain{
 }
 ```
 
-
-
+### 3.2 增加区块到区块里面
+```go
+func (blc *BlockChain) AddBlockToBlockchain(data string, height int64, preHash []byte) {
+	//创建新区块
+	newBlock := NewBlock(data, height, preHash)
+	//添加区块到区块链
+	blc.Blocks = append(blc.Blocks, newBlock)
+}
+````
 
 
 
